tests/machine/x/ocaml/sort_stable.error
File "/tmp/TestOCamlCompiler_VMValid_Goldensort_stable4268867763/001/sort_stable.ml", line 27, characters 0-16:
27 | List.rev !__res0)
     ^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type Obj.t list
       Type string is not compatible with type Obj.t 
